--- a/src/OrderCreatedEventHandlerService/appsettings.Development.json
+++ b/src/OrderCreatedEventHandlerService/appsettings.Development.json
@@ -4,6 +4,14 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "RabbitMQ": {
+    "Host": "rabbitmq://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
+  "ConnectionStrings": {
+    "SQLServer": "Server=localhost,1433;Database=OutboxInboxOrderAPIDB;User ID=SA;Password=reallyStrongPwd123;TrustServerCertificate=True"
   }
 }
 
