--- a/src/OrderCreatedEventHandlerService/OrderCreatedEventHandlerService.csproj
+++ b/src/OrderCreatedEventHandlerService/OrderCreatedEventHandlerService.csproj
@@ -9,21 +9,19 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-    <PackageReference Include="Quartz" Version="3.13.0" />
-    <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.13.0" />
-    <PackageReference Include="Quartz.Extensions.Hosting" Version="3.13.0" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.0" />
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="Jobs\" />
     <None Remove="Entities\" />
+    <None Remove="Consumers\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Jobs\" />
     <Folder Include="Entities\" />
+    <Folder Include="Consumers\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj">
