--- a/src/Shared/Shared.csproj
+++ b/src/Shared/Shared.csproj
@@ -9,9 +9,11 @@
   <ItemGroup>
     <None Remove="Events\" />
     <None Remove="Models\" />
+    <None Remove="Constants\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Events\" />
     <Folder Include="Models\" />
+    <Folder Include="Constants\" />
   </ItemGroup>
 </Project>
